# pyCardDeck

./: .codeclimate.yml  .gitignore  .landscape.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: publish.yml  test.yml
docs/: Makefile  api.rst  conf.py  index.rst  make.bat
docs/examples/: blackjack.rst  examples.rst  hearthstone.rst  kittens.rst  poker.rst
examples/: blackjack.py  exploding_kittens.py  hearthstone_arena.py  poker.py
pyCardDeck/: __init__.py  cards.py  deck.py  errors.py  standard_deck.yml
tests/: conftest.py  test_card.py  test_deck.py
